--- a/src/index.css
+++ b/src/index.css
@@ -151,8 +151,8 @@ main .image-transition:hover {
 }
 
 main .image-transition {
-  --x: 50%;
   --y: 50%;
+  --x: 50%;
 }
 
 main .image-transition:hover {
@@ -514,4 +514,111 @@ main nav div div div .alianza360 {
   -moz-box-shadow: 4px 14px 95px -13px rgba(104, 231, 23, 0.74);
   width: 100%;
   border-radius: 5px;
+}
+
+/* LISTADO DE PRODUCTOS */
+.contenido-principal {
+  padding-top: 2rem;
+}
+
+@media (min-width: 768px) {
+  .listado-productos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    /*column-gap: 2rem; separacion entre columnas*/
+    /*row-gap: 2rem; separacion hacia abajo*/
+    gap: 2rem;
+    /*separacion hacia todos los sentidos*/
+  }
+
+  .producto:nth-child(1) {
+    grid-column-start: 1;
+    grid-column-end: 7;
+    /*grid-column: 1/7;  ESTO ES LA ABREBIACION DE LO DE ARRIBA START/END    */
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
+
+  .producto:nth-child(1) img {
+    height: 43rem;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .producto:nth-child(2) {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+
+  .producto:nth-child(3) {
+    grid-column-start: 4;
+    grid-column-end: 7;
+  }
+
+  .producto:nth-child(2) img,
+  .producto:nth-child(3) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .producto:nth-child(4) {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
+  .producto:nth-child(5) {
+    grid-column-start: 3;
+    grid-column-end: 5;
+  }
+
+  .producto:nth-child(6) {
+    grid-column-start: 5;
+    grid-column-end: 7;
+  }
+}
+
+.producto:nth-child(4) img,
+.producto:nth-child(5) img,
+.producto:nth-child(6) img {
+  height: 26rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.producto {
+  background-color: #f0571b;
+  margin-bottom: 2rem;
+  border-radius: 0;
+}
+
+@media (min-width: 768px) {
+  .producto {
+    margin-bottom: 0;
+    border-radius: 0;
+    border-radius: 15px;
+  }
+}
+
+.producto:last-of-type {
+  margin-bottom: 0;
+}
+
+.texto-producto {
+  text-align: center;
+  color: white;
+  padding: 2rem;
+}
+
+.texto-producto h3 {
+  margin: 0;
+}
+
+.texto-producto p {
+  margin: 0 0 0.5rem 0;
+}
+
+.texto-producto .precio {
+  font-size: 2.8rem;
+  font-weight: 900;
 }
